temporary (or permanent?) overflow fix, also removed gunk from app.py but kept it around until I don't need the unicode symbols

--- a/css/lol.css
+++ b/css/lol.css
@@ -23,6 +23,7 @@ p {
     width: 100%;
     height: 100%;
     text-align: center;
+    overflow: hidden;
 }
 
 div {
